--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -96,12 +96,16 @@ jobs:
           #################################
           # 编译x64固件:
           cat >> .config <<EOF
-          #CONFIG_TARGET_ramips=y
-          #CONFIG_TARGET_ramips_mt7620=y
-          #CONFIG_TARGET_ramips_mt7620_DEVICE_xiaomi_miwifi-mini=y
-          CONFIG_TARGET_x86=y
-          CONFIG_TARGET_x86_64=y
-          CONFIG_TARGET_x86_64_Generic=y         
+          CONFIG_TARGET_ramips=y
+          CONFIG_TARGET_ramips_mt7620=y
+          CONFIG_TARGET_ramips_mt7620_DEVICE_xiaomi_miwifi-mini=y
+          
+          CONFIG_HAS_TESTING_KERNEL=y
+          CONFIG_TESTING_KERNEL=y
+          CONFIG_LINUX_5_15=y
+          #CONFIG_TARGET_x86=y
+          #CONFIG_TARGET_x86_64=y
+          #CONFIG_TARGET_x86_64_Generic=y         
           EOF
           # 固件压缩:
           #cat >> .config <<EOF
