--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -114,9 +114,9 @@ jobs:
           #CONFIG_KERNEL_BUILD_DOMAIN="Azure"
           #EOF
           ## 编译UEFI固件:
-          cat >> .config <<EOF
-          CONFIG_EFI_IMAGES=y
-          EOF
+          #cat >> .config <<EOF
+          #CONFIG_EFI_IMAGES=y
+          #EOF
           # IPv6支持:
           cat >> .config <<EOF
           CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
