--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -67,7 +67,7 @@ jobs:
           #sed -i '$a src-git kenzo https://github.com/kenzok8/openwrt-packages' feeds.conf.default
           sed -i '$a src-git small8 https://github.com/kenzok8/small-package' feeds.conf.default
           #sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
-          #git pull
+          git pull
           ./scripts/feeds update -a
           ./scripts/feeds install -a
                    
