--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -7,7 +7,7 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
+  #FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   #DIY_P1_SH: diy-part1.sh
   #DIY_P2_SH: diy-part2.sh
@@ -66,8 +66,7 @@ jobs:
         run: |
           #sed -i '$a src-git kenzo https://github.com/kenzok8/openwrt-packages' feeds.conf.default
           sed -i '$a src-git small8 https://github.com/kenzok8/small-package' feeds.conf.default
-          #sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
-          git pull
+          #
           ./scripts/feeds update -a
           ./scripts/feeds install -a
                    
