--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -17,7 +17,7 @@ env:
   UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
-  
+
 jobs:
 
   build_openwrt:
@@ -61,12 +61,13 @@ jobs:
           cd package
           mkdir packages
           cd packages
-          git clone https://github.com/kenzok8/small-package.git
+          git clone https://github.com/xiaorouji/openwrt-passwall.git
       - name: Update feeds
         run: |
           #sed -i '$a src-git kenzo https://github.com/kenzok8/openwrt-packages' feeds.conf.default
           sed -i '$a src-git small8 https://github.com/kenzok8/small-package' feeds.conf.default
-          #
+          #sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
+          #git pull
           ./scripts/feeds update -a
           ./scripts/feeds install -a
                    
@@ -136,7 +137,7 @@ jobs:
           CONFIG_PACKAGE_curl=y
           CONFIG_PACKAGE_htop=y
           #CONFIG_PACKAGE_nano=y
-          CONFIG_PACKAGE_screen=y
+          #CONFIG_PACKAGE_screen=y
           CONFIG_PACKAGE_tree=y
           CONFIG_PACKAGE_vim-fuller=y
           CONFIG_PACKAGE_wget=y
