--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -108,10 +108,20 @@ jobs:
           #CONFIG_TARGET_x86_64_Generic=y         
           EOF
           # 固件压缩:
-          #cat >> .config <<EOF
-          #CONFIG_TARGET_IMAGES_GZIP=y
-          #CONFIG_KERNEL_BUILD_USER="openwrt-wi"
-          #CONFIG_KERNEL_BUILD_DOMAIN="Azure"
+          CONFIG_PACKAGE_kmod-cfg80211=y
+          CONFIG_PACKAGE_kmod-mac80211=y
+          CONFIG_PACKAGE_MAC80211_DEBUGFS=y
+          CONFIG_PACKAGE_MAC80211_MESH=y
+          CONFIG_PACKAGE_kmod-mt76-core=y
+          CONFIG_PACKAGE_kmod-mt76x02-common=y
+          CONFIG_PACKAGE_kmod-mt76x2=y
+          CONFIG_PACKAGE_kmod-mt76x2-common=y
+          CONFIG_PACKAGE_kmod-rt2800-lib=y
+          CONFIG_PACKAGE_kmod-rt2800-mmio=y
+          CONFIG_PACKAGE_kmod-rt2800-soc=y
+          CONFIG_PACKAGE_kmod-rt2x00-lib=y
+          CONFIG_PACKAGE_kmod-rt2x00-mmio=y
+
           #EOF
           ## 编译UEFI固件:
           #cat >> .config <<EOF
