--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -116,8 +116,8 @@ jobs:
           #CONFIG_PACKAGE_kmod-mt76x02-common=y
           #CONFIG_PACKAGE_kmod-mt76x2=y
           #CONFIG_PACKAGE_kmod-mt76x2-common=y
-          CONFIG_PACKAGE_kmod-rt2800-lib=y
-          CONFIG_PACKAGE_kmod-rt2800-mmio=y
+          #CONFIG_PACKAGE_kmod-rt2800-lib=y
+          #CONFIG_PACKAGE_kmod-rt2800-mmio=y
           CONFIG_PACKAGE_kmod-rt2800-soc=y
 
 
