--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -118,7 +118,7 @@ jobs:
           CONFIG_PACKAGE_kmod-mt76x2-common=y
           #CONFIG_PACKAGE_kmod-rt2800-lib=y
           #CONFIG_PACKAGE_kmod-rt2800-mmio=y
-          CONFIG_PACKAGE_kmod-rt2800-soc=y
+          #CONFIG_PACKAGE_kmod-rt2800-soc=y
 
 
           EOF
