--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -16,7 +16,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  #CONFIG_FILE: .config
+  CONFIG_FILE: .config
   #DIY_P1_SH: diy-part1.sh
   #DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
@@ -89,7 +89,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-openvpn=y
           EOF
           # ========================固件定制部分结束========================
-          #sed -i 's/^[ \t]*//g' ./.config
+          sed -i 's/^[ \t]*//g' ./.config
           make defconfig
 
 
