--- a/.github/workflows/openwrt-wi.yml
+++ b/.github/workflows/openwrt-wi.yml
@@ -24,8 +24,7 @@ jobs:
 
     name: Build OpenWrt firmware
 
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-20.04
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
@@ -65,8 +64,8 @@ jobs:
       - name: Update feeds
         run: |
           #sed -i '$a src-git kenzo https://github.com/kenzok8/openwrt-packages' feeds.conf.default
-          sed -i '$a src-git small8 https://github.com/kenzok8/small-package' feeds.conf.default
-          #sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
+          #sed -i '$a src-git small8 https://github.com/kenzok8/small-package' feeds.conf.default
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           #git pull
           ./scripts/feeds update -a
           ./scripts/feeds install -a
@@ -102,7 +101,7 @@ jobs:
           
           CONFIG_HAS_TESTING_KERNEL=y
           CONFIG_TESTING_KERNEL=y
-          CONFIG_LINUX_6_1=y
+          CONFIG_LINUX_4_14=y
           #CONFIG_TARGET_x86=y
           #CONFIG_TARGET_x86_64=y
           #CONFIG_TARGET_x86_64_Generic=y         
@@ -112,13 +111,13 @@ jobs:
           #CONFIG_PACKAGE_kmod-mac80211=y
           #CONFIG_PACKAGE_MAC80211_DEBUGFS=y
           #CONFIG_PACKAGE_MAC80211_MESH=y
-          CONFIG_PACKAGE_kmod-mt76-core=y
-          CONFIG_PACKAGE_kmod-mt76x02-common=y
-          CONFIG_PACKAGE_kmod-mt76x2=y
-          CONFIG_PACKAGE_kmod-mt76x2-common=y
+          #CONFIG_PACKAGE_kmod-mt76-core=y
+          #CONFIG_PACKAGE_kmod-mt76x02-common=y
+          #CONFIG_PACKAGE_kmod-mt76x2=y
+          #CONFIG_PACKAGE_kmod-mt76x2-common=y
           #CONFIG_PACKAGE_kmod-rt2800-lib=y
           #CONFIG_PACKAGE_kmod-rt2800-mmio=y
-          #CONFIG_PACKAGE_kmod-rt2800-soc=y
+          CONFIG_PACKAGE_kmod-rt2800-soc=y
 
 
           EOF
